--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Couchbase Connector for Moleculer",
   "main": "index.js",
   "scripts": {
+    "setup": "npm install",
     "precommit": "npm run git-hook",
     "prepush": "npm run git-hook",
     "git-hook": "npm run lint -s",
-    "dev": "nodemon examples/index.js",
     "ci": "jest --watch",
     "test": "jest --coverage",
     "lint": "eslint --ext=.js src test",
